style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    text-decoration: none;
    border: none;
    outline: none;
    font-family: 'Poppins', sans-serif;
}

html{
    font-size: 62.5%;
}

body{
  
    height: 100vh;
    overflow-x: hidden;
    background-color: rgb(0, 0, 0);
    color: white;
    /*screen size*/
    width: 1920px; /* fixed width */
    min-width: 1920px; /* para di lumiliit */  
}

/* HEADER */
header {
    margin-top: 20px;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    padding: 1rem 9%;
    background-color: transparent;
    display: flex;
    justify-content: space-between;
    align-items: center;
    z-index: 100;
    /*screen size*/
    width: 1920px; /* fixed width */
    min-width: 1920px; /* para di lumiliit */ 
}

.logo{
    font-size: 3rem;
    color: rgb(151, 32, 32);
    font-weight: 800;
    cursor: pointer;
    transition: 0.5s ease;
}

.logo:hover{
    transform: scale(1.1);
}

nav a{
    font-size: 1.8rem;
    color: white;
    margin-left: 4rem;
    font-weight: 500;
    transition: 0.3s ease;
    border-bottom: 3px solid transparent;
}

nav a:hover {
    color: rgb(255, 0, 242);
    border-bottom: 3px solid rgb(255, 0, 242);
}

/* SECTION */
section {
    min-height: 1080px;
    padding: 10rem 9% 5rem;
    width: 1920px; /* fixed width */
    min-width: 1920px; /* para di lumiliit */ 
}

/* ================== HOME ================== */
#home{
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 8rem;
/* From https://css.glass "Glassmorphism Effect*/
    background: rgba(31, 15, 34, 0.75);
    border-radius: 16px;
    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
    backdrop-filter: blur(14.9px);
    -webkit-backdrop-filter: blur(14.9px);
    border: 1px solid rgba(149, 80, 163, 0.32);
}

/* TEXT */
.home-content h1 {
    font-size: 7rem;
    font-style: oblique;
    font-weight: 700;
    line-height: 1.3;
}

span {
    color: rgb(220, 103, 255);
}

.home-content h3 {
    font-size: 3rem;
    margin-bottom: 1rem;
    font-weight: 700;
}

.home-content p{
    font-size: 2.5rem;
    max-width: 800px;
}

/* IMAGE */
.home-img img{
    width: 22vw;
    border-radius: 50%;
    box-shadow: 0 0 25px rgb(255, 0, 242);
    cursor: pointer;
    transition: 0.3s ease;
}

.home-img img:hover{
    transform: scale(1.05);
}

/* SOCIAL ICONS */
.social-icons a {
    display:inline-flex;
    justify-content: center;
    align-items: center;
    width: 4rem;
    height: 4rem;
    background-color: transparent;
    border: 0.2rem solid rgb(220, 103, 255);;
    font-size: 2rem;
    border-radius: 50%;
    margin: 3rem 1.5rem 3rem 0;
    transition: 0.3s ease;
    color: white;
}

.social-icons a:hover{
    background-color: rgb(255, 0, 242);
}

/* BUTTON */
.btn{
    display: inline-block;
    padding: 1rem 2.8rem;
    background-color: rgb(220, 103, 255);
    color: white;
    border-radius: 4rem;
    font-size: 3rem;
    margin-top: 1rem;
    transition: 0.3s ease;
}

.btn:hover{
    background-color:  rgb(255, 0, 242);
}

/* ================== ABOUT ================== */
section#about {
/* From https://css.glass "Glassmorphism Effect*/
    background: rgba(31, 15, 34, 0.75);
    border-radius: 16px;
    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
    backdrop-filter: blur(14.9px);
    -webkit-backdrop-filter: blur(14.9px);
    border: 1px solid rgba(149, 80, 163, 0.32);

}

.about-content h1 {
    font-size: 7rem;
    font-style: oblique;
    font-weight: 700;
    line-height: 1.3;
    text-align: center;
}

.about-container1 p{
    font-size: 1.5rem;
    margin: 3rem;
    text-align: justify;
    padding: 0 3rem;
}

div.about-container1{
    /* From https://css.glass */
    background: rgba(236, 17, 255, 0.13);
    border-radius: 16px;
    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
    backdrop-filter: blur(9.9px);
    -webkit-backdrop-filter: blur(8.9px);
    border: 1px solid rgba(236, 17, 255, 0.42);

    display: inline-block;
    justify-content: center;
    align-items: center;
    gap: 8rem;
    margin: 3rem;
    padding: 2rem;
}

div.about-container2{
    /* From https://css.glass */
    background: rgba(236, 17, 255, 0.13);
    border-radius: 16px;
    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
    backdrop-filter: blur(8.9px);
    -webkit-backdrop-filter: blur(8.9px);
    border: 1px solid rgba(236, 17, 255, 0.42);

    display: inline-block;
    justify-content: center;
    align-items: center;
    gap: 8rem;
    margin: 3rem;
    padding: 2rem;
    
}

div.about-container2 h2{
    text-align: center;
    font-size: 5rem;
    font-style: oblique;
    font-weight: 700;
    line-height: 1.3;
}

.about-education {
  display: flex;
  justify-content: center;
  gap: 30px;
  flex-wrap: wrap; /* para responsive */
  padding-top: 4rem;
}

.edu-item {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  width: 330px;
  transition: 0.3s ease;
  
}

.edu-item img {
  width: 80px;
  height: 80px;
  border-radius: 50%;
  box-shadow: 0 0 25px rgb(255, 0, 242);
  margin-bottom: 10px;
}

.edu-item img:hover{
    transform: scale(1.05);
}

/* ================== SKILLS ================== */

section#skills {
    min-height: auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 10rem 9% 5rem;
    background: rgba(31, 15, 34, 0.75);
    backdrop-filter: blur(15px);
    width: 100%;
}

.skills-content h1 {
    font-size: 6rem; /* Medyo binabaan ko para di masyadong malaki */
    font-style: oblique;
    font-weight: 700;
    color: white;
    margin-bottom: 5rem;
    text-align: center;
}

.skills-wrapper {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 2.5rem;
    flex-wrap: wrap;
    justify-content: center;
    width: 100%;
    max-width: 1200px;
}
/* ... */

